[gd_scene load_steps=15 format=3 uid="uid://cnfoe6r4m5lmn"]

[ext_resource type="Script" path="res://projectiles/pink_enemy_projectile.gd" id="1_a4o61"]
[ext_resource type="Texture2D" uid="uid://kxwk28lj8mrh" path="res://assets/pink_enemy_projectile.png" id="1_il48c"]
[ext_resource type="Script" path="res://components/hitbox_component.gd" id="2_2iy6v"]
[ext_resource type="Script" path="res://components/move_component.gd" id="3_4kf6t"]
[ext_resource type="Script" path="res://components/scale_component.gd" id="4_mpdjl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ogq3o"]
atlas = ExtResource("1_il48c")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x80mc"]
atlas = ExtResource("1_il48c")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8ot0"]
atlas = ExtResource("1_il48c")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysrw7"]
atlas = ExtResource("1_il48c")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_vxk67"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogq3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x80mc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8ot0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysrw7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_dwr7l"]
radius = 4.0

[sub_resource type="Animation" id="Animation_0j2w0"]
resource_name = "ocillate"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-4, 0), Vector2(4, 0)]
}

[sub_resource type="Animation" id="Animation_u55dm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nt2xw"]
_data = {
"RESET": SubResource("Animation_u55dm"),
"ocillate": SubResource("Animation_0j2w0")
}

[node name="PinkEnemyProjectile" type="Node2D"]
script = ExtResource("1_a4o61")

[node name="Anchor" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Anchor"]
sprite_frames = SubResource("SpriteFrames_vxk67")
autoplay = "default"
frame = 3
frame_progress = 0.834547

[node name="HitboxComponent" type="Area2D" parent="Anchor"]
collision_layer = 0
script = ExtResource("2_2iy6v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Anchor/HitboxComponent"]
shape = SubResource("CircleShape2D_dwr7l")

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("3_4kf6t")
actor = NodePath("..")
velocity = Vector2(0, 30)

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("4_mpdjl")
sprite = NodePath("../Anchor/AnimatedSprite2D")
scale_amount = Vector2(2, 2)
scale_duration = 1.0

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(4.76837e-07, 1.42109e-14)
scale = Vector2(0.4, 0.4)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nt2xw")
}
autoplay = "ocillate"
